// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TunerMeter renders correctly when in tune 1`] = `
<div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm w-full max-w-md mx-auto"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="text-2xl font-semibold leading-none tracking-tight"
      >
        Tuner
      </h3>
    </div>
    <div
      class="p-6 pt-0 flex flex-col justify-center items-center"
    >
      <div
        class="flex w-64 h-32 overflow-hidden mb-4"
      >
        <svg
          class="w-full h-full"
          viewBox="0 0 100 50"
        >
          <path
            d="M 0 50 A 50 50 0 0 1 100 50 L 0 50 Z"
            fill="#e0e0e0"
          />
          <line
            stroke="black"
            stroke-width="1"
            x1="90"
            x2="95"
            y1="50"
            y2="50"
          />
          <line
            stroke="black"
            stroke-width="1"
            x1="78.2842712474619"
            x2="81.81980515339464"
            y1="21.7157287525381"
            y2="18.180194846605364"
          />
          <line
            stroke="black"
            stroke-width="1"
            x1="50"
            x2="50"
            y1="10"
            y2="5"
          />
          <line
            stroke="black"
            stroke-width="1"
            x1="21.7157287525381"
            x2="18.180194846605364"
            y1="21.715728752538098"
            y2="18.18019484660536"
          />
          <line
            stroke="black"
            stroke-width="1"
            x1="10"
            x2="5"
            y1="49.99999999999999"
            y2="49.99999999999999"
          />
          <line
            stroke="#ff6b6b"
            stroke-linecap="round"
            stroke-width="2.5"
            style="transform-origin: 50px 50px; transform: rotate(0deg); transition: transform 0.2s ease-out;"
            x1="50"
            x2="50"
            y1="50"
            y2="10"
          />
          <circle
            cx="50"
            cy="50"
            fill="black"
            r="3"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TunerMeter renders correctly when out of tune 1`] = `
<div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm w-full max-w-md mx-auto"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="text-2xl font-semibold leading-none tracking-tight"
      >
        Tuner
      </h3>
    </div>
    <div
      class="p-6 pt-0 flex flex-col justify-center items-center"
    >
      <div
        class="flex w-64 h-32 overflow-hidden mb-4"
      >
        <svg
          class="w-full h-full"
          viewBox="0 0 100 50"
        >
          <path
            d="M 0 50 A 50 50 0 0 1 100 50 L 0 50 Z"
            fill="#e0e0e0"
          />
          <line
            stroke="black"
            stroke-width="1"
            x1="90"
            x2="95"
            y1="50"
            y2="50"
          />
          <line
            stroke="black"
            stroke-width="1"
            x1="78.2842712474619"
            x2="81.81980515339464"
            y1="21.7157287525381"
            y2="18.180194846605364"
          />
          <line
            stroke="black"
            stroke-width="1"
            x1="50"
            x2="50"
            y1="10"
            y2="5"
          />
          <line
            stroke="black"
            stroke-width="1"
            x1="21.7157287525381"
            x2="18.180194846605364"
            y1="21.715728752538098"
            y2="18.18019484660536"
          />
          <line
            stroke="black"
            stroke-width="1"
            x1="10"
            x2="5"
            y1="49.99999999999999"
            y2="49.99999999999999"
          />
          <line
            stroke="#45aaf2"
            stroke-linecap="round"
            stroke-width="2.5"
            style="transform-origin: 50px 50px; transform: rotate(-45deg); transition: transform 0.2s ease-out;"
            x1="50"
            x2="50"
            y1="50"
            y2="10"
          />
          <circle
            cx="50"
            cy="50"
            fill="black"
            r="3"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TunerMeter renders correctly with no deviation 1`] = `
<div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm w-full max-w-md mx-auto"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="text-2xl font-semibold leading-none tracking-tight"
      >
        Tuner
      </h3>
    </div>
    <div
      class="p-6 pt-0 flex flex-col justify-center items-center"
    >
      <div
        class="flex w-64 h-32 overflow-hidden mb-4"
      >
        <svg
          class="w-full h-full"
          viewBox="0 0 100 50"
        >
          <path
            d="M 0 50 A 50 50 0 0 1 100 50 L 0 50 Z"
            fill="#e0e0e0"
          />
          <line
            stroke="black"
            stroke-width="1"
            x1="90"
            x2="95"
            y1="50"
            y2="50"
          />
          <line
            stroke="black"
            stroke-width="1"
            x1="78.2842712474619"
            x2="81.81980515339464"
            y1="21.7157287525381"
            y2="18.180194846605364"
          />
          <line
            stroke="black"
            stroke-width="1"
            x1="50"
            x2="50"
            y1="10"
            y2="5"
          />
          <line
            stroke="black"
            stroke-width="1"
            x1="21.7157287525381"
            x2="18.180194846605364"
            y1="21.715728752538098"
            y2="18.18019484660536"
          />
          <line
            stroke="black"
            stroke-width="1"
            x1="10"
            x2="5"
            y1="49.99999999999999"
            y2="49.99999999999999"
          />
          <circle
            cx="50"
            cy="50"
            fill="black"
            r="3"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
